--- a/colorGame.html
+++ b/colorGame.html
@@ -12,9 +12,10 @@
             <h1>The Great <br><span id="rgb">RGB(0, 0, 0)</span><br> Guessing Game</h1>
         </div>
         <div id="bottomNav">
-            <h3>New Colors</h3>
-            <h3>Easy</h3>
-            <h3>Hard</h3>
+            <button id="reset">New Colors</button>
+            <span id="result"></span>
+            <button class="mode">Easy</button>
+            <button class="mode selected">Hard</button>
         </div>
     </section>
     <section id="boxes">
